# dexposure-claw

./: .gitattributes  .gitignore  .skyignore  ACTION_CONDITIONED_ROADMAP.txt  CLAUDE.md  CODE_OF_CONDUCT.md  COMPATIBILITY_CHECK.md  CONTRIBUTING.md  Chord.md  DATASET.md  DATA_STRUCTURE.md  DEXPOSURE_INTEGRATION_REPORT.md  DEXPOSURE_USAGE.md  EXPERIMENT_GUIDE.md  EXPERIMENT_PLAN.md  Makefile  README.md  SECURITY.md  SIMPLIFICATION_COMPARISON.md  academic-writing-cs-financial.md  experiment-plan.md  gpu-server-dependencies.md  merge_note_for_advisor.md  pyproject.toml  requirements-gpu-server.txt  run_dexposure_experiment.py  run_full_experiment.py  run_macroprudential_tools.py  run_model_value_experiments.py  run_on_gpu_server.sh  run_quick_test.sh  run_task2_model_based.py  审稿意见逐条核验.md
.claude/: settings.json
.github/workflows/: ci.yml
.serena/: project.yml
.sisyphus/: boulder.json
DeXposure_Agent/: CLAUDE.md  CONVERSATION_LOG_2026-03-18.txt  DeXposure-Agent.tex  EXPERIMENT_PLAN.txt  EXPERIMENT_PLAN_v3.txt  EXPERIMENT_V2_HANDOFF.txt  reference.bib
DeXposure_Agent/autoresearch/: README.md  best_config.json  program.md  results.tsv  run_trial.py
DeXposure_Agent/dexposure_agent/: __init__.py  agent_loop.py  config.py  data_health.py  data_loader.py  decision.py  fm_predictor.py  monitor.py  scenario.py  serve.py
DeXposure_Agent/dexposure_claw/: .gitignore  README.md  package.json
DeXposure_Agent/docs/: analysis_dashboard.html  dashboard_data.json  figures_proposals.html
DeXposure_Agent/experiments/: __init__.py  ablations.py  audit_results.py  b1_risk_forecasting.py  b2_early_warning.py  b3_uncertainty_calibration.py  b4_stress_test.py  b5_decision_quality.py  b6_robustness.py  exceptions.py  exp_logger.py  figures.py  llm_eval_b5.py  methods.py  predict_helper.py  run_all.py  tune_agent.py  walk_forward.py
DeXposure_Agent/figures/: fig1_description.txt  fig1_system_overview.py  fig1_system_overview.tex  fig2_agent_pipeline.py  fig3_evaluation_framework.py  fig3_evaluation_framework.tex
DeXposure_Agent/results/: B1_C0.json  B1_C2.json  B2_C0.json  B2_C2.json  B3_C0.json  B4_C0.json  B4_C2.json  B5_C0.json  B5_C2.json  B6_C0.json  B6_C2.json  (+4 more)
DeXposure_FM/: DeXposure-FM.tex
DeXposure_FM_V2/: .gitignore  DeXposure-FM.tex  diff.tex  reference_audit.md
analysis/: auprc_baseline_comparison.py  neg_pos_ratio_analysis.json  neg_pos_ratio_simple.py  neg_ratio_deep_dive.py  neg_ratio_impact_analysis.py  recommended_actions.md
archive/: README.md
claw/: README.md  package.json  pyproject.toml
claw/adapters/claude-code/: mcp.json.j2
claw/adapters/codex/: AGENTS.md.j2
claw/adapters/hermes/: config.yaml.j2
claw/pack/agents/: benchmark-runner.md  result-auditor.md
claw/pack/memory/: EXPERIMENTS.md
claw/src/dexposure_claw/: cli.py  installer.py  mcp_server.py
claw/src/dexposure_claw/runtime/: __init__.py  run_store.py
claw/src/dexposure_claw/tools/: __init__.py  audit.py  reports.py
cloud/: bootstrap_and_run.sh  launch_verified_gpu.sh  pre2022_run.sh  train.sh  train.yaml  train_nosync.yaml
data/: historical-network_week_2020-03-30.json  historical-network_week_2025-07-01.json  meta_df.csv
dexposure_fm/: macroprudential_tools.py
docs/: dexposure_fm_experiments.md  macroprudential_tools.md
experiments/: __init__.py  ablations.py  b2_early_warning.py  b4_stress_test.py  b5_decision_quality.py  figures.py  run_all.py  tune_agent.py  walk_forward.py
lib/: __init__.py  util.py
notebooks/: dexposure_experiment_plan.ipynb
paper/: CLAUDE.md  DeXposure-Agent.tex
paper-emnlp-industry/: ABSTRACT.md  OUTLINE.md  README.md  main.tex  references.bib
scripts/: start_server.sh  sync_and_serve.sh
src/: macroprudential_tools.py  network_statistics.py
(+547 files in other folders)
